--- a/Explore/SandBox/.HeaderTestMapping.DTEMPLATE.json
+++ b/Explore/SandBox/.HeaderTestMapping.DTEMPLATE.json
@@ -23,6 +23,7 @@
     }
   },
   "dataFileExtension" : "zip",
+  "updateTime" : "2024-09-10T16:36:14.813Z",
   "objectRefs" : [ {
     "id" : "ja7B19G1LgrerkXccycZk8",
     "name" : "Sandbox_LocalFiles",
