--- a/Explore/SandBox/.Mapping1.DTEMPLATE.json
+++ b/Explore/SandBox/.Mapping1.DTEMPLATE.json
@@ -23,6 +23,7 @@
     }
   },
   "dataFileExtension" : "zip",
+  "updateTime" : "2024-09-10T16:36:14.811Z",
   "objectRefs" : [ {
     "id" : "aS3jigXQm4PeXgIWxDRtEu",
     "name" : "DB_Ductuan_SQLServer",
