--- a/Explore/SandBox/.Mapping2.DTEMPLATE.json
+++ b/Explore/SandBox/.Mapping2.DTEMPLATE.json
@@ -23,6 +23,7 @@
     }
   },
   "dataFileExtension" : "zip",
+  "updateTime" : "2024-09-10T16:36:14.814Z",
   "objectRefs" : [ {
     "id" : "2MWo1Q5VppFjl9D7UbMGy8",
     "name" : "DB_Ductuan_SFDCDeveloper",
