--- a/Explore/SandBox/.Mapping4.DTEMPLATE.json
+++ b/Explore/SandBox/.Mapping4.DTEMPLATE.json
@@ -23,6 +23,7 @@
     }
   },
   "dataFileExtension" : "zip",
+  "updateTime" : "2024-09-10T16:36:14.815Z",
   "objectRefs" : [ {
     "id" : "fQOG28XuQUGboqABl07LGA",
     "name" : "DB_Ductuan_SQL_Errick",
