--- a/Explore/SandBox/MappingSwitchTest/.MappingTask1.MTT.json
+++ b/Explore/SandBox/MappingSwitchTest/.MappingTask1.MTT.json
@@ -23,6 +23,7 @@
     }
   },
   "dataFileExtension" : "zip",
+  "updateTime" : "2024-09-10T16:36:14.814Z",
   "objectRefs" : [ {
     "id" : "kvAzXk9glqDhM4LVKeeXA8",
     "name" : "MappingTest1",
