--- a/Explore/SandBox/MappingSwitchTest/.MappingTest1_OLD.DTEMPLATE.json
+++ b/Explore/SandBox/MappingSwitchTest/.MappingTest1_OLD.DTEMPLATE.json
@@ -23,6 +23,7 @@
     }
   },
   "dataFileExtension" : "zip",
+  "updateTime" : "2024-09-10T16:36:14.813Z",
   "objectRefs" : [ {
     "id" : "2peIyF6BO2xbrd2goQsHit",
     "name" : "DB_Ductuan_LocalCSVFiles",
