--- a/Explore/SandBox/Misc/.Mapping5.DTEMPLATE.json
+++ b/Explore/SandBox/Misc/.Mapping5.DTEMPLATE.json
@@ -23,6 +23,7 @@
     }
   },
   "dataFileExtension" : "zip",
+  "updateTime" : "2024-09-10T16:36:14.816Z",
   "objectRefs" : [ {
     "id" : "6Mpt1ADe0vPlDqVDxIO0K0",
     "name" : "DB_Ductuan_WinOracle",
