--- a/Explore/SandBox/.ServiceNow Synchronization Task1.DSS.json
+++ b/Explore/SandBox/.ServiceNow Synchronization Task1.DSS.json
@@ -23,6 +23,7 @@
     }
   },
   "dataFileExtension" : "zip",
+  "updateTime" : "2024-09-10T17:00:25.889Z",
   "objectRefs" : [ {
     "id" : "ja7B19G1LgrerkXccycZk8",
     "name" : "Sandbox_LocalFiles",
